# nn-xor-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
layers/: neural_network.cpp  neural_network.hpp
libs/lib/cmake/Catch2/: Catch2ConfigVersion.cmake
libs/share/pkgconfig/: catch2.pc  eigen3.pc
